@@ -26,7 +26,6 @@ import static org.junit.Assert.assertEquals;
 
 import java.nio.file.Path;
 import java.nio.file.Paths;
-import java.util.Arrays;
 import java.util.HashMap;
 import java.util.List;
 
@@ -52,9 +51,9 @@ public class PottrTest {
 
     private static final Path ROOT = Paths.get("src", "test", "resources", ".temp-deploy", "pOTTR", "0.1", "files");
 
-    private String instancePath;
-    private String templatePath;
-    private boolean expextedResults;
+    private final String instancePath;
+    private final String templatePath;
+    private final boolean expextedResults;
 
     public PottrTest(String instance, String template, boolean expextedResults) {
         this.instancePath = instance;
@@ -64,7 +63,7 @@ public class PottrTest {
 
     @Parameterized.Parameters(name = "{index}: instance: {0}, template: {1}")
     public static List<Object[]> data() {
-        return Arrays.asList(
+        return List.of(
             new Object[] { "01-basics/1/ins/Person1.stottr", "01-basics/1/tpl/", true },
             new Object[] { null, "01-basics/2/tpl/", true },
             new Object[] { "01-basics/3/tpl/cycle.stottr", "01-basics/3/tpl/", false },
